# tunitas-apanolio

./: .gitignore  Makefile.am  PACKAGES.md  README.md  buildconf  configure.ac
ac/: test-server.m4  with-storage.m4
check/lib/: .gitignore
lib/: libmod_apanolio.am  libtunitas-apanolio.am
maintenance/: nearby  simple  v2  v2+  v2c  v2l  v2s
noinst/lib/: libautotools-autoconf+tunitas-apanolio.am  libmod_apanolio.am  libtunitas-apanolio-resting.am  libtunitas-apanolio-schema.am  libtunitas-apanolio-storage.am  libtunitas-apanolio.am  libwant.am
src/apache/httpd/config/: Value.mod.apanolio.config.xcpp
src/autotools/autoconf/: Makefrag.am
src/mod/apanolio/: Makefrag.am  handler.xcpp  httpd.xcpp  module.xcpp  namespace.xcpp  open_logs.xcpp
src/mod/apanolio/config/: Specification.xcpp  namespace.xcpp  parse.xcpp
src/mod/apanolio/method/: Deleter.xcpp  Emplacer.xcpp  Getter.xcpp  Optioner.xcpp  Poster.xcpp  Prototype.xcpp  Putter.xcpp  namespace.xcpp
src/tests/unit/: Makefrag.am  apanolio.Fixture.xcpp  compiler.Fixture.Recompiler.xcpp  compiler.Fixture.Relog.xcpp  compiler.Fixture.xcpp  concurrent.Fixture.xcpp  engine.Engine.FABRIC.xcpp  engine.Engine.FILES.xcpp  engine.Engine.LEVELDB.xcpp  engine.Engine.MEMORY.xcpp  engine.Engine.MYSQL.xcpp  engine.Engine.NONE.xcpp  engine.Engine.PGSQL.xcpp  engine.Engine.RAMCLOUD.xcpp  engine.Engine.SCARPET.xcpp  engine.Engine.SQLITE.xcpp  engine.Engine.declaration.xcpp  engine.Engine.xcpp  engine.Fixture.xcpp  engine.Record_Generator.xcpp  engine.Temporary_Data_Base.xcpp  engine.Temporary_Directory.xcpp  error.Category.xcpp  error.Fixture.Maker.Storage.xcpp  error.Fixture.xcpp  exception.Fixture.Maker.Null.xcpp  exception.Fixture.Maker.Storage.xcpp  exception.Fixture.Maker.System.xcpp  exception.Fixture.Maker.declaration.xcpp  exception.Fixture.Maker.template.xcpp  exception.Fixture.Maker.xcpp  exception.Fixture.xcpp  generate_some_content.xcpp  main.xcpp  namespace.xcpp  resource.Fixture.xcpp  resource.Identifier.xcpp  resource.Record.xcpp  resting.Fixture.xcpp  resting.Validate.xcpp  (+44 more)
src/tunitas/apanolio/: Makefrag.am  Storage.xcpp  exception.Version.xcpp  namespace.xcpp  required.xcpp  url.Parser.xcpp  url.URI.xcpp
src/tunitas/apanolio/concurrent/: Conditions.xcpp  Guardian.xcpp  Operation.xcpp  namespace.xcpp
src/tunitas/apanolio/error/: Category.xcpp  Code.xcpp  Condition.xcpp  category.xcpp  namespace.xcpp
src/tunitas/apanolio/exception/: Argument.xcpp  Aspect.xcpp  Identifier.xcpp  Invariant.xcpp  Null.xcpp  Record.xcpp  Storage.xcpp  System.xcpp  Version.xcpp  namespace.xcpp
src/tunitas/apanolio/resource/: Identifier.xcpp  Record.xcpp  identifier.Identifier.xcpp  identifier.construct.xcpp  identifier.to_string.xcpp  namespace.xcpp  to_string.xcpp
src/tunitas/apanolio/resting/: Buffer.xcpp  File.xcpp  Makefrag.am  Stream.xcpp  namespace.xcpp  validate.xcpp
src/tunitas/apanolio/resting/buffer/: Buffer.xcpp  Gulp.xcpp  gulp.xcpp  namespace.xcpp  validate.xcpp
src/tunitas/apanolio/resting/file/: File.xcpp  Finalizer.xcpp  Gulp.xcpp  Iterator.xcpp  Move.xcpp  Remove.xcpp  Stream.xcpp  gulp.xcpp  namespace.xcpp  tempname.xcpp
src/tunitas/apanolio/resting/file/detail/: Gulped.xcpp  Opened.xcpp  namespace.xcpp
src/tunitas/apanolio/resting/gulping/: Gulped.xcpp  namespace.xcpp
src/tunitas/apanolio/resting/stream/: Iterator.xcpp  Opened.xcpp  Stream.xcpp  namespace.xcpp
src/tunitas/apanolio/schema/: Makefrag.am  io.xcpp  limits.xcpp  namespace.xcpp
src/tunitas/apanolio/schema/compiler/: Interface.Guard.xcpp  Interface.xcpp  Log.xcpp  Prototype.xcpp  namespace.xcpp
src/tunitas/apanolio/schema/v0/: Compiler.xcpp  Field.xcpp  field.Limits.xcpp  field.Specification.xcpp  namespace.xcpp
src/tunitas/apanolio/schema/v1/: Compiler.xcpp  namespace.xcpp
src/tunitas/apanolio/schema/v2/: Compiler.xcpp  namespace.xcpp
src/tunitas/apanolio/storage/: Engine.xcpp  Makefrag.am  Storage.xcpp  namespace.xcpp  open.xcpp
src/tunitas/apanolio/storage/engine/: Configuration.xcpp  Engine.FABRIC.xcpp  Engine.FILES.xcpp  Engine.LEVELDB.xcpp  Engine.MEMORY.xcpp  Engine.MYSQL.xcpp  Engine.NONE.xcpp  Engine.PGSQL.xcpp  Engine.RAMCLOUD.xcpp  Engine.SCARPET.xcpp  Engine.SQLITE.xcpp  Engine.declaration.xcpp  Engine.xcpp  Name.xcpp  Prototype.xcpp  State.xcpp  namespace.xcpp
src/tunitas/apanolio/storage/engine/configuration/: Configuration.FABRIC.xcpp  Configuration.MYSQL.xcpp  Configuration.PGSQL.xcpp  Configuration.RAMCLOUD.xcpp  Configuration.SCARPET.xcpp  Configuration.declaration.xcpp  Configuration.xcpp  Prototype.xcpp  namespace.xcpp
src/tunitas/apanolio/storage/engine/level/: db2.Recorder.Record.xcpp  db2.Recorder.declaration.xcpp  db2.Recorder.xcpp  db2.Sink.xcpp  namespace.xcpp
src/tunitas/apanolio/storage/engine/state/: Prototype.xcpp  State.FABRIC.xcpp  State.MYSQL.xcpp  State.PGSQL.xcpp  State.RAMCLOUD.xcpp  State.SCARPET.xcpp  State.declaration.xcpp  State.xcpp  namespace.xcpp
src/tunitas/apanolio/uri/: Parser.xcpp  URI.xcpp  namespace.xcpp
src/tunitas/apanolio/url/: Parser.xcpp  URI.xcpp  namespace.xcpp
src/want/: Makefrag.am  namespace.xcpp
src/want/rigging/exception/: Aspect.xcpp  SetUp.xcpp  TearDown.xcpp  namespace.xcpp
tests/: Makefrag.am  start-contact-stop.test
tests/httpd/: .gitignore  Makefile  apachectl  compile.am  ping-local
tests/httpd/conf/: .gitignore
tests/httpd/conf.d/: minimal.conf
tests/httpd/conf.modules.d/: .gitignore  minimal.conf
tests/httpd/html/: crossdomain.xml  index.html
tests/httpd/logs/: .gitignore
tests/httpd/mk/: substitute-all-variables.mk
tests/httpd/modules/: .gitignore
tests/httpd/templates/conf/: httpd.conf
tests/unit/: Makefrag.am  SPECIMEN_LONG_FILE.txt  SPECIMEN_SHORT_FILE.txt  rigging.sh
